<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diagnose</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to the Hitting Set Game! Choose a Mode: </string>
    <string name="btn_findmode">Find all Diagnoses</string>
    <string name="btn_timemode">Play for Time</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="fragment_game_text_num_diagnoses">diagnoses: </string>
    <string name="fragment_game_text_num_tries">tries: </string>
    <string name="fragment_game_text_num_completed">completed: </string>
    <string name="fragment_game_text_num_best">best: </string>
    <string name="fragment_game_text_header_conflicts">conflicts</string>
    <string name="fragment_game_text_header_diagnoses">diagnoses</string>
    <string name="fragment_game_toast_duplicate_diagnose">duplicate diagnose</string>
    <string name="fragment_game_toast_no_diagnose">this is not a minimal diagnose</string>
    <string name="title_activity_list_level">ListLevelActivity</string>
    <string name="text_level">Level #</string>
    <string name="title_activity_choose_time_game">ChooseTimeGameActivity</string>
    <string name="solve_or_skip">Solve or Skip</string>
    <string name="solve_text">asdf</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="btn_clear">Clear Database</string>
    <string name="title_activity_time_game">TimeGameActivity</string>

</resources>